// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should not render title if name is not set 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <SectionRenderer
    classes={Object {}}
    depth={3}
  />
</ContextProvider>
`;

exports[`render should render section 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <SectionRenderer
    classes={Object {}}
    components={
      <Components
        components={Array []}
        depth={3}
        exampleMode="collapse"
        usageMode="collapse"
      />
    }
    content={
      <Consumer(Examples)
        exampleMode="collapse"
        examples={
          Array [
            Object {
              "content": 
<button>
  OK
</button>
,
              "evalInContext": [Function],
              "type": "code",
            },
            Object {
              "content": "Hello *world*!",
              "type": "markdown",
            },
          ]
        }
        name="Foo"
      />
    }
    depth={3}
    name="Foo"
    sections={
      <Sections
        depth={3}
        sections={Array []}
      />
    }
    slug="foo"
  />
</ContextProvider>
`;

exports[`render should render title if name is set 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <SectionRenderer
    classes={Object {}}
    depth={3}
    name="test"
    slug="test"
  />
</ContextProvider>
`;

exports[`should not render components list if not defined 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <Consumer(Section)
    depth={3}
    section={
      Object {
        "exampleMode": "collapse",
        "name": "No components",
        "slug": "no-components",
        "usageMode": "collapse",
      }
    }
  />
</ContextProvider>
`;

exports[`should not render sections if not defined 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <Consumer(Section)
    depth={3}
    section={
      Object {
        "exampleMode": "collapse",
        "name": "No sections",
        "slug": "no-sections",
        "usageMode": "collapse",
      }
    }
  />
</ContextProvider>
`;

exports[`should render components list 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <Consumer(Section)
    depth={3}
    section={
      Object {
        "components": Array [],
        "exampleMode": "collapse",
        "name": "Components",
        "slug": "components",
        "usageMode": "collapse",
      }
    }
  />
</ContextProvider>
`;

exports[`should render section renderer 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <Consumer(Section)
    depth={3}
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": 
<button>
  OK
</button>
,
            "evalInContext": [Function],
            "type": "code",
          },
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "description": "This is a description",
        "exampleMode": "collapse",
        "name": "Foo",
        "sections": Array [],
        "slug": "foo",
        "usageMode": "collapse",
      }
    }
  />
</ContextProvider>
`;

exports[`should render sections if defined 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "pagePerSection": false,
      },
      "displayMode": "all",
    }
  }
>
  <Consumer(Section)
    depth={3}
    section={
      Object {
        "exampleMode": "collapse",
        "name": "Nested sections",
        "sections": Array [],
        "slug": "nested-sections",
        "usageMode": "collapse",
      }
    }
  />
</ContextProvider>
`;
